bin/testsuite/tests/compiler/src/errors/compiler5064.swg
#global testerror "Err0229"

func toto()
{
    const B = 1
    const A = catch B
}
